fixes in start windows scripts