@@ -1,12 +1,15 @@
-set ZXPOLY_HOME="%cd%"
+@echo off
+setlocal EnableExtensions
 
-rem uncomment the line below if graphics works slowly
-rem set JAVA_EXTRA_GFX_FLAGS="-Dsun.java2d.opengl=true"
-rem set JAVA_EXTRA_GFX_FLAGS="-Dcom.sun.management.jmxremote=true -Dsun.java2d.opengl=true"
+set "ZXPOLY_HOME=%cd%"
 
-rem set JAVA_EXTRA_GFX_FLAGS="-Dcom.sun.management.jmxremote=true -Dsun.java2d.opengl=true"
+rem Uncomment one line below if graphics is slow or you need JMX.
+rem set "JAVA_EXTRA_GFX_FLAGS=-Dsun.java2d.opengl=true"
+rem set "JAVA_EXTRA_GFX_FLAGS=-Dcom.sun.management.jmxremote=true -Dsun.java2d.opengl=true"
 
-set JAVA_FLAGS="-XX:+UseZGC -XX:+TieredCompilation -XX:MaxMetaspaceSize=128m -Dsun.rmi.transport.tcp.maxConnectionThreads=0 -XX:-DontCompileHugeMethods -XX:+DisableAttachMechanism -Xverify:none -Xms512m -Xmx1024m --add-opens=java.base/java.util=ALL-UNNAMED"
-set JAVA_RUN="%ZXPOLY_HOME%\jre\bin\javaw.exe"
+if not defined JAVA_EXTRA_GFX_FLAGS set "JAVA_EXTRA_GFX_FLAGS="
 
-start "ZXPoly" "%JAVA_RUN%" %JAVA_FLAGS% %JAVA_EXTRA_GFX_FLAGS% "-Djava.library.path=%ZXPOLY_HOME%" -jar "%ZXPOLY_HOME%/zxpoly-emul.jar" %*
+set "JAVA_FLAGS=-XX:+UseZGC -XX:MaxMetaspaceSize=128m -Dsun.rmi.transport.tcp.maxConnectionThreads=0 -XX:-DontCompileHugeMethods -XX:+DisableAttachMechanism -Xms512m -Xmx1024m --add-opens=java.base/java.util=ALL-UNNAMED"
+set "JAVA_RUN=%ZXPOLY_HOME%\jre\bin\javaw.exe"
+
+start "ZXPoly" /D "%ZXPOLY_HOME%" "%JAVA_RUN%" %JAVA_FLAGS% %JAVA_EXTRA_GFX_FLAGS% -jar "%ZXPOLY_HOME%\zxpoly-emul.jar" %*
